--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  win32: ^5.5.3
 
   cupertino_icons: ^1.0.2
   cached_network_image: ^3.2.3
@@ -22,6 +23,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   flutter_lints: ^2.0.0
 
